@@ -760,8 +760,7 @@ WARN_LOGFILE           =
 INPUT                  = @CMAKE_SOURCE_DIR@/base \
                          @CMAKE_SOURCE_DIR@/misc \
                          @CMAKE_SOURCE_DIR@/nasl \
-                         @CMAKE_SOURCE_DIR@/omp \
-                         @CMAKE_SOURCE_DIR@/osp
+                         @CMAKE_SOURCE_DIR@/omp
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding. Doxygen uses
