@@ -1,3 +1,8 @@
+2017-01-20  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* doc/Doxyfile.in, doc/Doxyfile_full.in: Remove 'osp/' directory from
+	Doxygen input.
+
 2017-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	Library "osp" is now in gvm-libs/osp.
